k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbnb-app
  labels:
    app: airbnb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: airbnb
  template:
    metadata:
      labels:
        app: airbnb
    spec:
      containers:
        - name: airbnb-container
          image: ankitdockerd/airbnb:v1  
          ports:
          - containerPort: 8080
