k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbnb-service

spec:
  selector:
    app: airbnb
  ports:
    - port: 80         
      targetPort: 8080
